# data_it_enterprises

./: Dockerfile  LICENSE  README.md  app.py  app_stream.py  main.py  params.yaml  pyproject.toml  requirements.txt  schema.yaml  setup.py  template.py
.devcontainer/: devcontainer.json
artifacts/data_transformation/: test.csv  train.csv
artifacts/model_evaluation/: metrics.json
artifacts/model_trainer/: model.joblib
config/: config.yaml
data_it_entp/: __init__.py
data_it_entp/components/: data_ingestion.py  data_validation.py  model_evaluation.py  model_trainer.py
data_it_entp/config/: configuration.py
data_it_entp/entity/: config_entity.py
data_it_entp/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_06_prediction.py
data_it_entp/utils/: common.py
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb  trials.ipynb  visualization.ipynb
src/data_it_entp/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/data_it_entp/config/: configuration.py
src/data_it_entp/entity/: config_entity.py
src/data_it_entp/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
static/css/: styles.css
static/current_it_data/: allmetrics.csv
static/predicted_data/: merged_data.csv
templates/: index.html  results.html
