[tool.poetry]
name = "data_it_entp"
version = "0.1.0"
description = ""
authors = ["Krunal Shambharkar <krunalss@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<3.9.7 || >3.9.7"
mlflow="2.2.2"
notebook="7.0.6 "
numpy="1.24.4"
scikit-learn="1.3.2"
matplotlib="3.7.3"
python-box="6.0.2"
pyYAML="6.0.1"
tqdm="4.66.1"
ensure="1.0.2"
joblib="1.3.2"
types-PyYAML="6.0.12.12"
Flask="2.3.3 "
Flask-Cors="4.0.0"
streamlit="1.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
